# fastapi-microservices

./: README.md
pacific-auth-service/: Dockerfile  README.md  pyproject.toml
pacific-auth-service/src/auth_service/: __init__.py  main.py
pacific-auth-service/src/auth_service/core/: dependencies.py  exceptions.py
pacific-auth-service/src/auth_service/domains/user/api/: endpoints.py
pacific-auth-service/src/auth_service/domains/user/models/: user.py
pacific-auth-service/src/auth_service/domains/user/repositories/: user_repository.py
pacific-auth-service/src/auth_service/domains/user/services/: user_service.py
pacific-foundation/: COMPILATION_SUMMARY.md  Makefile  README.md  build_manifest.json  pyproject.toml  setup.py
pacific-foundation/docs/: IMPLEMENTATION_SUMMARY.md
pacific-foundation/examples/: __init__.py  basic_usage.py  circuit_breaker_demo.py
pacific-foundation/scripts/: build.py  compile.py  dev.py
pacific-foundation/src/ncm_foundation/: __init__.py  version.py
pacific-foundation/src/ncm_foundation/core/: __init__.py  cache.py  config.py  container.py  database.py  logging.py  middleware.py  monitoring.py
pacific-foundation/src/ncm_foundation/core/cache/: README.md  __init__.py  cache_loader.py  cache_strategies.py  examples.py  manager.py  multi_level.py  redis_cache.py  redis_sync_cache.py  reloader.py  serializers.py  sql_cache.py
pacific-foundation/src/ncm_foundation/core/database/: README.md  __init__.py  config.py  engine.py  entities.py  examples.py  interfaces.py  manager.py  migrations.py  pooling.py  providers.py  session.py  transactions.py  utils.py
pacific-foundation/src/ncm_foundation/core/database/migrations/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  config.py  examples.py  manager.py  mongodb_manager.py  runner.py  sqlalchemy_manager.py
pacific-foundation/src/ncm_foundation/core/database/models/: __init__.py  base.py  listeners.py
pacific-foundation/src/ncm_foundation/core/database/pooling/: __init__.py  _impl.py  base.py  mongodb_pool.py  sqlalchemy_pool.py
pacific-foundation/src/ncm_foundation/core/database/providers/: __init__.py  base.py  mongodb_provider.py  sqlalchemy_provider.py
pacific-foundation/src/ncm_foundation/core/database/repositories/: __init__.py  base.py  mongodb_repo.py  sqlalchemy_repo.py
pacific-foundation/src/ncm_foundation/core/database/schemas/: __init__.py  base.py
pacific-foundation/src/ncm_foundation/core/database/security/: __init__.py  access_control.py  audit_logging.py  encryption.py
pacific-foundation/src/ncm_foundation/core/database/types/: annotated.py  datetime.py  enum.py  example.py  guid.py
pacific-foundation/src/ncm_foundation/core/logging/: __init__.py  formatters.py  handlers.py  interfaces.py  manager.py  masking.py  rotation.py
pacific-foundation/src/ncm_foundation/core/messaging/: __init__.py  circuit_breaker.py  interfaces.py  kafka_broker.py  kafka_consumer.py  kafka_producer.py  retry_strategies.py
pacific-foundation/src/ncm_foundation/core/security/: __init__.py  auth.py  keycloak.py  middleware.py
pacific-foundation/src/ncm_foundation/core/utils/: __init__.py  encoders.py  helpers.py  validators.py
pacific-foundation/tests/: __init__.py  conftest.py  test_cache_manager.py  test_core_config.py  test_core_container.py  test_core_decorators.py  test_database_config.py  test_database_manager.py  test_database_migrations.py  test_database_repositories.py  test_database_transactions.py  test_logging_manager.py  test_messaging_circuit_breaker.py  test_security_auth.py
pacific-sample/: .env.dev  .env.dev.backup  .env.prod  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  simple_test.py  test_app.py
pacific-sample/docs/: NCM_SAMPLE_SUMMARY.md
pacific-sample/migrations/: env.py
pacific-sample/migrations/versions/: 001_create_users_table.py  002_create_roles_table.py  003_create_user_roles_table.py
pacific-sample/scripts/: migrate.py  setup.py  test_api.py
pacific-sample/src/ncm_sample/: __init__.py  config.py  main.py
pacific-sample/src/ncm_sample/api/: __init__.py
pacific-sample/src/ncm_sample/api/v1/: router.py
pacific-sample/src/ncm_sample/common/api/: __init__.py  demo_router.py
pacific-sample/src/ncm_sample/config/: __init__.py  keycloak.py  settings.py
pacific-sample/src/ncm_sample/core/: __init__.py  container.py  decorators.py  dependencies.py  security.py
pacific-sample/src/ncm_sample/features/authentication/: __init__.py
pacific-sample/src/ncm_sample/features/authentication/api/: __init__.py  auth_router.py
pacific-sample/src/ncm_sample/features/authentication/controllers/: __init__.py  auth_controller.py
pacific-sample/src/ncm_sample/features/authentication/models/: __init__.py  auth_audit_log.py  user_session.py
pacific-sample/src/ncm_sample/features/authentication/repositories/: __init__.py  auth_audit_log_repository.py  user_session_repository.py
pacific-sample/src/ncm_sample/features/authentication/schemas/: __init__.py  auth_schemas.py
pacific-sample/src/ncm_sample/features/authentication/services/: __init__.py  auth_services.py
pacific-sample/src/ncm_sample/features/error_handling/: __init__.py
pacific-sample/src/ncm_sample/features/messaging/services/: __init__.py  messaging_services.py
pacific-sample/src/ncm_sample/features/monitoring/: __init__.py
pacific-sample/src/ncm_sample/features/security/: __init__.py
pacific-sample/src/ncm_sample/features/shared/: __init__.py
pacific-sample/src/ncm_sample/features/shared/controllers/: base_controller.py
pacific-sample/src/ncm_sample/features/shared/services/: base_service.py
pacific-sample/src/ncm_sample/features/user_management/: __init__.py
pacific-sample/src/ncm_sample/features/user_management/models/: user.py  (+1 more)
pacific-sample/src/ncm_sample/features/utilities/: __init__.py
pacific-sample/src/ncm_sample/middlewares/: __init__.py  auth_middleware.py  cors_middleware.py  error_handling_middleware.py  rate_limit_middleware.py  security_middleware.py
pacific-sample/tests/: __init__.py  test_api.py
(+17 files in other folders)
