# NCM Auth Service Configuration
# Extends shared microservices configuration for authentication service

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncm-auth-service"
version = "0.1.0"
description = "NCM Authentication Service - Handles user authentication and authorization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "NCM Team", email = "dev@ncm.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: FastAPI",
]
dependencies = [
    # Inherit from shared config
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",

    # API Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Authentication & Security
    "fastapi-users[sqlalchemy]>=12.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.7",
    "oauthlib>=3.2.2",

    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",

    # Inter-service communication
    "httpx>=0.26.0",
    "aio-pika>=9.3.0",  # RabbitMQ

    # Monitoring
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",

    # NCM Foundation (local development - adjust path as needed)
    # "ncm-foundation @ git+https://github.com/your-org/ncm-foundation.git@v0.1.0",
    # "ncm-contracts @ git+https://github.com/your-org/ncm-contracts.git@v0.1.0",
]

[project.optional-dependencies]
dev = [
    # Inherit shared dev dependencies
    "pre-commit>=3.5.0",
    "ruff>=0.1.11",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.7.1",
    "bandit>=1.7.6",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "faker>=20.1.0",

    # Auth service specific testing
    "pytest-httpx>=0.25.0",
    "freezegun>=1.2.2",  # Time mocking for JWT tests

    # Security testing
    "safety>=2.3.5",
    "pip-audit>=2.7.0",
]

database = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
]

security = [
    "cryptography>=41.0.7",
    "bcrypt>=4.1.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "oauthlib>=3.2.2",
    "pyjwt>=2.8.0",
]

observability = [
    "prometheus-client>=0.19.0",
    "opentelemetry-distro>=0.43b0",
    "opentelemetry-instrumentation>=0.43b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "sentry-sdk>=1.38.0",
    "datadog>=0.48.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ncm-auth-service"
Documentation = "https://ncm-auth-service.readthedocs.io/"
Repository = "https://github.com/your-org/ncm-auth-service.git"
Issues = "https://github.com/your-org/ncm-auth-service/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["auth_service*"]
exclude = ["tests*", "docs*", "scripts*", "examples*"]

# ===================================================================
# AUTH SERVICE-SPECIFIC CODE QUALITY CONFIGURATIONS
# ===================================================================

[tool.ruff]
# Extend shared configuration with auth service-specific settings
extend = "../../shared/pyproject.toml"

# Additional security-focused ignores
ignore = [
    # Inherit shared ignores
    "B027", "FBT003", "S105", "S106", "S107", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Auth service specific ignores (security patterns)
    "S102",  # exec-used (sometimes needed for dynamic imports in auth)
    "S103",  # bad-file-permissions (handled by deployment)
]

[tool.ruff.per-file-ignores]
# Inherit shared ignores
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"examples/**/*" = ["T20", "T10", "PLR0913", "PLR0912"]
"scripts/**/*" = ["T20", "T10", "PLR0915", "C901"]
"**/config/**" = ["PLR0913", "PLR0912"]
"**/migrations/**" = ["PLR0915", "C901"]
"**/alembic/versions/**" = ["PLR0915", "C901"]
"**/*.pb.py" = ["PLR0913", "PLR0912", "PLR0915", "C901"]

# Auth service specific ignores
"**/security/**" = [
    "S101",     # Asserts used in security tests
    "S102",     # exec-used (dynamic key loading)
    "S103",     # bad-file-permissions (key files)
    "PLR0913",  # Security functions can have many parameters
]
"**/auth/**" = [
    "PLR0913",  # Auth functions often need many parameters
    "PLR0915",  # Complex auth logic
    "C901",     # Complex authentication flows
    "ARG001",   # Auth decorators may not use all arguments
]

[tool.ruff.mccabe]
# Auth service can have complex logic due to security requirements
max-complexity = 18

[tool.mypy]
# Extend shared MyPy config with auth service specifics
python_version = "3.11"

# Auth service has many security-related imports
[[tool.mypy.overrides]]
module = [
    # Inherit shared overrides
    "transformers.*", "torch.*", "weaviate.*", "boto3.*",
    "langchain.*", "llama_index.*", "pyspark.*", "pandas.*",
    "numpy.*", "scipy.*", "sklearn.*", "tensorflow.*",
    # Auth service specific
    "jose.*", "passlib.*", "cryptography.*",
    "fastapi_users.*", "oauthlib.*",
]

ignore_missing_imports = true

# Strict typing for security-critical code
[[tool.mypy.overrides]]
module = "auth_service.domains.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "auth_service.core.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.bandit]
# Extend shared bandit config for auth service
exclude_dirs = [
    "tests", "scripts", "examples", "docs", "migrations", "alembic",
    "**/security/key_material/", "**/test_keys/"
]
skips = [
    "B101", "B601",  # Skip assert checks and shell usage
    "B102", "B103",  # Skip hardcoded passwords (handled by environment)
    "B106",  # Skip hardcoded password func arg (OAuth patterns)
    "B107",  # Skip hardcoded password default (test patterns)
]

[tool.pylint]
# Extend shared pylint with auth service allowances
max-line-length = 88
disable = [
    # Inherit shared disables
    "C0114", "C0115", "C0116", "R0903", "R0913", "R0914", "R0915", "W0613", "C0103", "R0917",
    # Auth service specific disables
    "R0904",  # too-many-public-methods (auth services have many endpoints)
    "R0912",  # too-many-branches (complex auth logic)
    "W0612",  # unused-variable (sometimes needed for security patterns)
]

# ===================================================================
# AUTH SERVICE TESTING CONFIGURATION
# ===================================================================

[tool.pytest.ini_options]
# Extend shared pytest config with auth service specifics
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "test_*.pyi"]
python_classes = ["Test*", "AuthTest*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",  # Higher coverage for security-critical service
    "--durations=10",
    "--asyncio-mode=auto",
]
markers = [
    # Inherit shared markers
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external deps)",
    "e2e: End-to-end tests (slowest, full system)",
    "slow: Slow running tests",
    "api: API endpoint tests",
    "database: Database operation tests",
    "external: Tests requiring external services",
    "smoke: Basic smoke tests",
    "performance: Performance benchmark tests",
    "security: Security-related tests",
    # Auth service specific markers
    "auth: Authentication tests",
    "jwt: JWT token tests",
    "oauth: OAuth flow tests",
    "permissions: Permission and role tests",
    "security: Security vulnerability tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "setup.py",
    "*/scripts/*",
    "*/examples/*",
    "*/migrations/*",
    "*/alembic/versions/*",
    # Auth service specific exclusions
    "*/test_keys/*",
    "*/key_material/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
    # Auth service specific exclusions
    "def main",  # Main entry points
    "if __name__ == '__main__':",
    "raise HTTPException",  # Auth error handling
]

# ===================================================================
# AUTH SERVICE DEVELOPMENT TASKS
# ===================================================================

[tool.taskipy.tasks]
# Code Quality (inherit and extend)
lint = "pre-commit run --all-files"
format = "black . && isort . && ruff --fix ."
type-check = "mypy ."
security = "bandit -r . && safety check"
quality = "task lint && task type-check && task security"

# Testing (auth service specific)
test = "pytest"
test-cov = "pytest --cov-report=html"
test-unit = "pytest -m 'unit and not integration'"
test-integration = "pytest -m integration"
test-auth = "pytest -m auth"
test-security = "pytest -m security"
test-slow = "pytest -m slow"

# Auth service specific tasks
generate-keys = "python scripts/generate_keys.py"
rotate-secrets = "python scripts/rotate_secrets.py"
validate-tokens = "python scripts/validate_tokens.py"
audit-permissions = "python scripts/audit_permissions.py"

# Development
clean = "rm -rf .coverage htmlcov .mypy_cache .pytest_cache __pycache__ *.egg-info dist build"
install = "pip install -e .[dev]"
install-db = "pip install -e .[dev,database]"
install-security = "pip install -e .[dev,security]"
update-deps = "pip-compile --upgrade && pip-sync"

# Database operations
db-migrate = "alembic upgrade head"
db-create-migration = "alembic revision --autogenerate"
db-downgrade = "alembic downgrade -1"

# Documentation
docs = "sphinx-build docs docs/_build/html"
docs-serve = "sphinx-autobuild docs docs/_build/html"

# ===================================================================
# AUTH SERVICE CONFIGURATIONS
# ===================================================================

[tool.auth]
# Authentication service configurations

# JWT settings
jwt = {algorithm = "RS256", expiration_hours = 24, issuer = "ncm-auth-service"}

# OAuth providers
oauth = {google = true, github = true, microsoft = false}

# Security policies
security = {
    password_min_length = 12,
    require_2fa = true,
    session_timeout_minutes = 480,
    max_login_attempts = 5,
    lockout_duration_minutes = 30
}

# Rate limiting
rate_limiting = {
    login_attempts_per_hour = 10,
    password_reset_per_hour = 3,
    api_calls_per_minute = 1000
}

# Audit logging
audit = {enabled = true, log_sensitive_actions = true, retention_days = 2555}

[tool.monitoring]
# Monitoring configurations for auth service

# Metrics
metrics = {enabled = true, interval_seconds = 15}

# Logging
logging = {level = "INFO", format = "json", file_rotation = "daily"}

# Alerts (auth service specific)
alerts = {
    on_failed_login_spike = true,
    on_suspicious_activity = true,
    on_token_expiry = true,
    on_permission_violation = true
}

# Tracing
tracing = {enabled = true, sample_rate = 1.0}  # 100% tracing for security
