# NCM Foundation Service Configuration
# Extends shared microservices configuration for the core foundation library

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncm-foundation"
version = "0.1.0"
description = "NCM Foundation Library - Core components and utilities for all microservices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
authors = [
    {name = "NCM Team", email = "dev@ncm.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
]
dependencies = [
    # Inherit from shared config
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",

    # Core framework
    "pydantic-settings>=2.1.0",

    # Database and ORM
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Messaging and caching
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    "kafka-python-ng>=2.2.0",
    "aiokafka>=0.8.1",
    "aio-pika>=9.3.0",  # RabbitMQ

    # API Framework (for foundation services)
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.7",

    # Observability
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.38.0",

    # HTTP client
    "httpx>=0.26.0",
    "aiohttp>=3.9.1",

    # Data processing
    "pandas>=2.1.4",
    "numpy>=1.26.2",
]

[project.optional-dependencies]
dev = [
    # Inherit shared dev dependencies
    "pre-commit>=3.5.0",
    "ruff>=0.1.11",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.7.1",
    "bandit>=1.7.6",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "faker>=20.1.0",

    # Foundation service specific testing
    "pytest-factoryboy>=2.5.1",
    "pytest-benchmark>=4.0.0",
    "freezegun>=1.2.2",

    # Documentation
    "sphinx>=7.2.6",
    "myst-parser>=2.0.0",
    "sphinx-rtd-theme>=1.3.0",

    # Type checking extras
    "types-redis",
    "types-aiofiles",
]

observability = [
    "opentelemetry-distro>=0.43b0",
    "opentelemetry-instrumentation>=0.43b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0",
    "opentelemetry-instrumentation-redis>=0.43b0",
    "datadog>=0.48.0",
]

[project.urls]
Homepage = "https://github.com/your-org/ncm-foundation"
Documentation = "https://ncm-foundation.readthedocs.io/"
Repository = "https://github.com/your-org/ncm-foundation.git"
Issues = "https://github.com/your-org/ncm-foundation/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ncm_foundation*"]
exclude = ["tests*", "docs*", "scripts*", "examples*"]

# ===================================================================
# FOUNDATION SERVICE CODE QUALITY CONFIGURATIONS
# ===================================================================

[tool.ruff]
# Extend shared configuration with foundation service-specific settings
extend = "../../shared/pyproject.toml"

# Foundation service requires very strict code quality
ignore = [
    # Inherit shared ignores
    "B027", "FBT003", "S105", "S106", "S107", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Foundation specific ignores (minimal - very strict standards)
]

[tool.ruff.per-file-ignores]
# Inherit shared ignores
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"examples/**/*" = ["T20", "T10", "PLR0913", "PLR0912"]
"scripts/**/*" = ["T20", "T10", "PLR0915", "C901"]
"**/config/**" = ["PLR0913", "PLR0912"]
"**/migrations/**" = ["PLR0915", "C901"]
"**/alembic/versions/**" = ["PLR0915", "C901"]
"**/*.pb.py" = ["PLR0913", "PLR0912", "PLR0915", "C901"]

# Foundation service specific ignores (strict)
"**/core/**" = [
    "PLR0913",  # Core components can have many parameters
    "PLR0915",  # Complex core logic allowed
    "C901",     # Complex algorithms in core
]

[tool.ruff.mccabe]
# Foundation service allows higher complexity for core functionality
max-complexity = 15

[tool.mypy]
# Extend shared MyPy config with foundation service specifics
python_version = "3.11"

# Foundation service requires very strict typing
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true

# Comprehensive import overrides for foundation service
[[tool.mypy.overrides]]
module = [
    # Inherit shared overrides
    "transformers.*", "torch.*", "weaviate.*", "boto3.*",
    "langchain.*", "llama_index.*", "pyspark.*", "pandas.*",
    "numpy.*", "scipy.*", "sklearn.*", "tensorflow.*",
    # Foundation service specific
    "fastapi.*", "uvicorn.*", "starlette.*",
    "sqlalchemy.*", "alembic.*", "asyncpg.*",
    "redis.*", "aioredis.*",
    "kafka.*", "aiokafka.*", "aio_pika.*",
    "opentelemetry.*", "prometheus_client.*", "sentry_sdk.*",
    "jose.*", "passlib.*", "cryptography.*",
]
ignore_missing_imports = true

# Strict typing for all foundation code
[[tool.mypy.overrides]]
module = "ncm_foundation.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true

# Allow gradual typing in examples and tests
[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
ignore_errors = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bandit]
# Extend shared bandit config for foundation service
exclude_dirs = [
    "tests", "scripts", "examples", "docs", "migrations", "alembic",
]
skips = [
    "B101", "B601",  # Skip assert checks and shell usage
]

[tool.pylint]
# Extend shared pylint with foundation service allowances
max-line-length = 88
disable = [
    # Inherit shared disables
    "C0114", "C0115", "C0116", "R0903", "R0913", "R0914", "R0915", "W0613", "C0103", "R0917",
    # Foundation service specific disables (minimal - very strict)
    "R0902",  # too-many-instance-attributes (foundation models)
    "R0904",  # too-many-public-methods (foundation classes)
    "R0912",  # too-many-branches (complex foundation logic)
]

# ===================================================================
# FOUNDATION SERVICE TESTING CONFIGURATION
# ===================================================================

[tool.pytest.ini_options]
# Extend shared pytest config with foundation service specifics
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "test_*.pyi"]
python_classes = ["Test*", "FoundationTest*", "CoreTest*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",  # High coverage for foundation library
    "--durations=10",
    "--asyncio-mode=auto",
]
markers = [
    # Inherit shared markers
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external deps)",
    "e2e: End-to-end tests (slowest, full system)",
    "slow: Slow running tests",
    "api: API endpoint tests",
    "database: Database operation tests",
    "external: Tests requiring external services",
    "smoke: Basic smoke tests",
    "performance: Performance benchmark tests",
    "security: Security-related tests",
    # Foundation service specific markers
    "core: Core functionality tests",
    "cache: Caching layer tests",
    "database: Database abstraction tests",
    "logging: Logging system tests",
    "messaging: Message queue tests",
    "middleware: Middleware tests",
    "monitoring: Monitoring system tests",
    "security: Security utilities tests",
    "circuit_breaker: Circuit breaker tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "setup.py",
    "*/scripts/*",
    "*/examples/*",
    "*/migrations/*",
    "*/alembic/versions/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
    # Foundation service specific exclusions
    "def main",  # Main entry points
    "if __name__ == '__main__':",
    # Generated and framework code
    "@event.listens_for",
    "@validates",
]

# ===================================================================
# FOUNDATION SERVICE DEVELOPMENT TASKS
# ===================================================================

[tool.taskipy.tasks]
# Code Quality (inherit and extend)
lint = "pre-commit run --all-files"
format = "black . && isort . && ruff --fix ."
type-check = "mypy ."
security = "bandit -r . && safety check"
quality = "task lint && task type-check && task security"

# Testing (foundation specific)
test = "pytest"
test-cov = "pytest --cov-report=html"
test-unit = "pytest -m 'unit and not integration'"
test-integration = "pytest -m integration"
test-core = "pytest -m core"
test-cache = "pytest -m cache"
test-database = "pytest -m database"
test-slow = "pytest -m slow"

# Foundation service specific tasks
build-package = "python -m build"
publish-package = "python -m twine upload dist/*"
create-release = "python scripts/create_release.py"
validate-release = "python scripts/validate_release.py"

# Development
clean = "rm -rf .coverage htmlcov .mypy_cache .pytest_cache __pycache__ *.egg-info dist build"
install = "pip install -e .[dev]"
install-observability = "pip install -e .[dev,observability]"
update-deps = "pip-compile --upgrade && pip-sync"

# Database operations
db-migrate = "alembic upgrade head"
db-create-migration = "alembic revision --autogenerate"
db-downgrade = "alembic downgrade -1"

# Circuit breaker testing
test-circuit-breaker = "python examples/circuit_breaker_demo.py"

# Documentation
docs = "sphinx-build docs docs/_build/html"
docs-serve = "sphinx-autobuild docs docs/_build/html"
docs-api = "python scripts/generate_api_docs.py"

# ===================================================================
# FOUNDATION SERVICE CONFIGURATIONS
# ===================================================================

[tool.foundation]
# Foundation service configurations

# Core settings
core = {
    debug = false,
    log_level = "INFO",
    enable_circuit_breaker = true,
    enable_metrics = true,
    enable_tracing = true
}

# Database settings
database = {
    default_pool_size = 20,
    default_max_overflow = 30,
    default_pool_timeout = 30,
    enable_migrations = true,
    enable_connection_pooling = true
}

# Cache settings
cache = {
    default_ttl = 300,
    max_memory_mb = 512,
    enable_compression = true,
    enable_serialization = true
}

# Messaging settings
messaging = {
    default_timeout = 30,
    retry_attempts = 3,
    circuit_breaker_threshold = 5,
    enable_message_deduplication = true
}

# Security settings
security = {
    jwt_algorithm = "RS256",
    default_token_expiration = 3600,
    enable_rate_limiting = true,
    enable_cors = true,
    enable_helmet = true
}

# Monitoring settings
monitoring = {
    metrics_enabled = true,
    tracing_sample_rate = 0.1,
    log_format = "json",
    enable_health_checks = true,
    enable_performance_monitoring = true
}

[tool.monitoring]
# Monitoring configurations for foundation service

# Metrics
metrics = {enabled = true, interval_seconds = 10}

# Logging
logging = {
    level = "INFO",
    format = "json",
    file_rotation = "daily",
    include_correlation_id = true,
    include_service_name = true
}

# Tracing
tracing = {
    enabled = true,
    sample_rate = 0.1,
    include_database_queries = true,
    include_external_calls = true,
    include_cache_operations = true
}

# Alerts (foundation service specific)
alerts = {
    on_circuit_breaker_open = true,
    on_database_connection_pool_exhausted = true,
    on_cache_memory_limit_exceeded = true,
    on_message_queue_backlog = true,
    on_performance_degradation = true
}