# NCM Sample Service Configuration
# Extends shared microservices configuration for the comprehensive sample service

[tool.poetry]
name = "ncm-sample"
version = "0.1.0"
description = "NCM Sample Project - Comprehensive example demonstrating all microservices patterns and Foundation Library integration"
authors = ["NCM Team <dev@ncm.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ncm_sample", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# NCM Foundation Library (local development - adjust paths as needed)
ncm-foundation = {path = "../ncm-foundation", develop = true}
# ncm-contracts = {path = "../ncm-contracts", develop = true}

# Core dependencies (inherit from shared)
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# API Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"

# Database dependencies
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.9"

# HTTP client
httpx = "^0.28.0"
requests = "^2.32.3"
aiohttp = "^3.9.1"

# Authentication & Security
python-jose = {version = ">=3.3.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^44.0.0"
python-multipart = "^0.0.12"

# External integrations
python-keycloak = "^5.0.0"

# Messaging
aiokafka = "^0.10.0"
kafka-python = "^2.0.2"
aio-pika = "^9.3.0"  # RabbitMQ

# Caching
redis = "^5.0.0"
aioredis = "^2.0.1"

# Monitoring & Observability
structlog = "^24.1.0"
prometheus-client = "^0.21.0"
sentry-sdk = "^1.38.0"

# Data processing
pandas = "^2.1.4"
numpy = "^1.26.2"

# Testing (enhanced)
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.5.0"
pytest-httpx = "^0.25.0"
faker = "^20.1.0"
freezegun = "^1.2.2"

[tool.poetry.group.dev.dependencies]
# Code Quality Tools (enhanced)
pre-commit = "^3.5.0"
ruff = "^0.1.11"
black = "^24.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
bandit = "^1.7.6"

# Security scanning
safety = "^2.3.5"
pip-audit = "^2.7.0"

# Development tools
ipdb = "^0.13.13"
rich = "^13.7.0"

# Documentation
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
# GPU acceleration (optional)
cudf = "^23.12.0"
cuml = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ===================================================================
# SAMPLE SERVICE CODE QUALITY CONFIGURATIONS
# ===================================================================

[tool.ruff]
# Extend shared configuration with sample service-specific settings
extend = "../../shared/pyproject.toml"

# Additional comprehensive service ignores
ignore = [
    # Inherit shared ignores
    "B027", "FBT003", "S105", "S106", "S107", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Sample service specific ignores (comprehensive patterns)
    "FBT001",  # Boolean positional args (integration patterns)
    "FBT002",  # Boolean defaults (API patterns)
    "T20",     # Print statements (demonstration code)
    "ARG001",  # Unused function args (framework patterns)
]

[tool.ruff.per-file-ignores]
# Inherit shared ignores
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"examples/**/*" = ["T20", "T10", "PLR0913", "PLR0912"]
"scripts/**/*" = ["T20", "T10", "PLR0915", "C901"]
"**/config/**" = ["PLR0913", "PLR0912"]
"**/migrations/**" = ["PLR0915", "C901"]
"**/alembic/versions/**" = ["PLR0915", "C901"]
"**/*.pb.py" = ["PLR0913", "PLR0912", "PLR0915", "C901"]

# Sample service specific ignores (comprehensive)
"**/features/**" = [
    "PLR0913",  # Feature classes can have many attributes
    "PLR0915",  # Complex feature implementations
    "C901",     # Complex business logic
    "R0904",    # too-many-public-methods (feature classes)
]
"**/core/**" = [
    "PLR0913",  # Core components have many dependencies
    "R0902",    # too-many-instance-attributes (core configs)
]
"**/middlewares/**" = [
    "PLR0913",  # Middleware functions have many parameters
    "ARG001",   # Framework middleware patterns
]
"**/api/**" = [
    "PLR0913",  # API endpoints have many parameters
    "ARG001",   # FastAPI dependency injection patterns
]
"simple_test.py" = [
    "T20",      # Print statements in test files
    "T10",      # Debugger statements in test files
    "PLR0915",  # Long test functions
    "C901",     # Complex test logic
]

[tool.ruff.mccabe]
# Sample service can have complex integration patterns
max-complexity = 20

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ncm_sample", "shared"]
known_third_party = [
    "fastapi", "uvicorn", "starlette",
    "pydantic", "pydantic_settings",
    "sqlalchemy", "alembic", "asyncpg", "psycopg2",
    "httpx", "aiohttp", "requests",
    "structlog", "logging", "rich",
    "pytest", "pytest_asyncio", "faker",
    "redis", "aioredis",
    "kafka", "aiokafka", "aio_pika",
    "cryptography", "jose", "passlib",
    "prometheus_client", "sentry_sdk",
    "pandas", "numpy",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = false  # Allow for demonstration code
disallow_untyped_defs = false     # Allow for example code
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
strict_equality = true
show_error_codes = true

# Comprehensive import overrides for sample service
[[tool.mypy.overrides]]
module = [
    # Inherit shared overrides
    "transformers.*", "torch.*", "weaviate.*", "boto3.*",
    "langchain.*", "llama_index.*", "pyspark.*", "pandas.*",
    "numpy.*", "scipy.*", "sklearn.*", "tensorflow.*",
    # Sample service specific
    "fastapi.*", "uvicorn.*", "starlette.*",
    "sqlalchemy.*", "alembic.*", "asyncpg.*",
    "redis.*", "aioredis.*",
    "kafka.*", "aiokafka.*", "aio_pika.*",
    "keycloak.*", "jose.*", "passlib.*",
    "prometheus_client.*", "sentry_sdk.*",
]
ignore_missing_imports = true

# Strict typing for core business logic
[[tool.mypy.overrides]]
module = "ncm_sample.core.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Allow gradual typing in examples and tests
[[tool.mypy.overrides]]
module = ["tests.*", "examples.*", "simple_test.*"]
ignore_errors = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.bandit]
# Extend shared bandit config for comprehensive service
exclude_dirs = [
    "tests", "scripts", "examples", "docs", "migrations", "alembic",
    "docker/keycloak", "**/test_keys/"
]
skips = [
    "B101", "B601",  # Skip assert checks and shell usage
    "B102", "B103",  # Skip hardcoded passwords (handled by environment)
    "B106", "B107",  # Skip OAuth patterns
]

[tool.pylint]
# Extend shared pylint with comprehensive allowances
max-line-length = 88
disable = [
    # Inherit shared disables
    "C0114", "C0115", "C0116", "R0903", "R0913", "R0914", "R0915", "W0613", "C0103", "R0917",
    # Sample service specific disables (comprehensive patterns)
    "R0801",  # duplicate-code (demonstration patterns)
    "R0902",  # too-many-instance-attributes (comprehensive models)
    "R0904",  # too-many-public-methods (feature-rich classes)
    "R0912",  # too-many-branches (complex business logic)
    "R0914",  # too-many-locals (data processing functions)
    "R0915",  # too-many-statements (integration examples)
    "W0612",  # unused-variable (framework patterns)
    "C0200",  # consider-using-enumerate (sometimes less readable)
    "C0201",  # consider-iterating-dictionary (order matters)
    "W0703",  # broad-except (demonstration error handling)
    "W0718",  # broad-exception-caught (framework patterns)
]

# ===================================================================
# SAMPLE SERVICE TESTING CONFIGURATION
# ===================================================================

[tool.pytest.ini_options]
# Extend shared pytest config with comprehensive service specifics
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "test_*.pyi"]
python_classes = ["Test*", "*Test*", "SampleTest*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",  # Good coverage for comprehensive service
    "--durations=10",
    "--asyncio-mode=auto",
]
markers = [
    # Inherit shared markers
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, external deps)",
    "e2e: End-to-end tests (slowest, full system)",
    "slow: Slow running tests",
    "api: API endpoint tests",
    "database: Database operation tests",
    "external: Tests requiring external services",
    "smoke: Basic smoke tests",
    "performance: Performance benchmark tests",
    "security: Security-related tests",
    # Sample service specific markers (comprehensive)
    "auth: Authentication and authorization tests",
    "messaging: Message queue tests",
    "caching: Cache operation tests",
    "keycloak: Keycloak integration tests",
    "redis: Redis caching tests",
    "kafka: Kafka messaging tests",
    "monitoring: Monitoring and metrics tests",
    "foundation: NCM Foundation integration tests",
    "features: Feature-specific tests",
    "core: Core functionality tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "setup.py",
    "*/scripts/*",
    "*/examples/*",
    "*/migrations/*",
    "*/alembic/versions/*",
    "simple_test.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
    # Sample service specific exclusions
    "def main",  # Main entry points
    "if __name__ == '__main__':",
    # Generated and framework code
    "@app.on_event",
    "@app.middleware",
    "@router.*",
    # Test and example code
    "simple_test.py",
]

# ===================================================================
# SAMPLE SERVICE DEVELOPMENT TASKS
# ===================================================================

[tool.taskipy.tasks]
# Code Quality (inherit and extend)
lint = "pre-commit run --all-files"
format = "black . && isort . && ruff --fix ."
type-check = "mypy ."
security = "bandit -r . && safety check"
quality = "task lint && task type-check && task security"

# Testing (comprehensive)
test = "pytest"
test-cov = "pytest --cov-report=html"
test-unit = "pytest -m 'unit and not integration'"
test-integration = "pytest -m integration"
test-auth = "pytest -m auth"
test-messaging = "pytest -m messaging"
test-features = "pytest -m features"
test-slow = "pytest -m slow"

# Sample service specific tasks
run-server = "uvicorn ncm_sample.main:app --reload --host 0.0.0.0 --port 8000"
run-simple-test = "python simple_test.py"
run-migrations = "alembic upgrade head"
create-migration = "alembic revision --autogenerate"
test-api = "python test_app.py"

# Development
clean = "rm -rf .coverage htmlcov .mypy_cache .pytest_cache __pycache__ *.egg-info dist build"
install = "poetry install"
install-dev = "poetry install --with dev"
install-gpu = "poetry install --with dev,gpu"
update-deps = "poetry update"

# Database operations
db-migrate = "alembic upgrade head"
db-create-migration = "alembic revision --autogenerate"
db-downgrade = "alembic downgrade -1"
db-reset = "alembic downgrade base && alembic upgrade head"

# Docker operations
docker-build = "docker build -t ncm-sample:latest ."
docker-run = "docker run -p 8000:8000 ncm-sample:latest"
docker-compose-up = "docker-compose up -d"

# Monitoring
check-health = "curl http://localhost:8000/health"
view-metrics = "curl http://localhost:8000/metrics"
view-logs = "docker-compose logs -f ncm-sample"

# Documentation
docs = "sphinx-build docs docs/_build/html"
docs-serve = "sphinx-autobuild docs docs/_build/html"

# ===================================================================
# SAMPLE SERVICE CONFIGURATIONS
# ===================================================================

[tool.sample]
# Sample service comprehensive configurations

# Service settings
service = {
    name = "ncm-sample",
    version = "0.1.0",
    environment = "development",
    debug = true
}

# API settings
api = {
    host = "0.0.0.0",
    port = 8000,
    workers = 4,
    reload = true,
    cors_enabled = true,
    rate_limiting = true
}

# Database settings
database = {
    url = "postgresql://user:password@localhost:5432/ncm_sample",
    pool_size = 20,
    max_overflow = 30,
    pool_timeout = 30,
    echo = false
}

# Authentication settings
auth = {
    jwt_secret = "change-in-production",
    jwt_algorithm = "RS256",
    jwt_expiration_hours = 24,
    keycloak_enabled = true,
    keycloak_server_url = "http://localhost:8080",
    keycloak_realm = "ncm",
    keycloak_client_id = "ncm-sample"
}

# Messaging settings
messaging = {
    kafka_enabled = true,
    kafka_bootstrap_servers = ["localhost:9092"],
    kafka_group_id = "ncm-sample",
    rabbitmq_enabled = true,
    rabbitmq_url = "amqp://guest:guest@localhost:5672/",
    redis_enabled = true,
    redis_url = "redis://localhost:6379"
}

# Feature flags
features = {
    authentication = true,
    authorization = true,
    messaging = true,
    caching = true,
    monitoring = true,
    user_management = true,
    security = true,
    error_handling = true,
    utilities = true
}

[tool.monitoring]
# Monitoring configurations for comprehensive service

# Metrics
metrics = {enabled = true, interval_seconds = 15}

# Logging
logging = {
    level = "INFO",
    format = "json",
    file_rotation = "daily",
    include_request_id = true,
    include_user_id = true
}

# Tracing
tracing = {
    enabled = true,
    sample_rate = 0.5,
    include_database_queries = true,
    include_external_calls = true
}

# Alerts (comprehensive)
alerts = {
    on_auth_failure_spike = true,
    on_database_connection_issues = true,
    on_message_queue_backlog = true,
    on_cache_misses_high = true,
    on_response_time_degradation = true,
    on_error_rate_increase = true,
    on_resource_exhaustion = true
}